--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -44,6 +44,10 @@ body {
     position: relative;
 }
 
+.layui-form-item a {
+    font-size: 12px;
+}
+
 .layui-form-item i {
     position: absolute;
     top: 10px;
